# ModbusTools-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  ModbusTools.pro  README.md  changelog.md  mbtools.pro
.github/: FUNDING.yml
doc/: CMakeLists.txt  DoxyfileClient  DoxyfileClient.in  DoxyfileServer  DoxyfileServer.in
doc/input/client/: client.md
doc/input/server/: server.md
doc/input/shared/: mainpage.md
doc/output/: ModbusClient.chm  ModbusClient.qch  ModbusClient.qhc  ModbusServer.chm  ModbusServer.qch  ModbusServer.qhc
examples/client/: Eastron_SDM220Modbus.mbc  Hiking_DDS238-1_ZN.mbc  Must_PV1800.mbc
examples/server/: test_script.mbs  test_script2.mbs
src/: README.md  version.pri
src/client/: CMakeLists.txt  client.pro  win_resource.rc
src/client/core/: client.cpp  client.h  client_global.cpp  client_global.h  core.pri
src/client/gui/: client_rsc.qrc  client_ui.cpp  client_ui.h  client_ui.ui  client_windowmanager.cpp  client_windowmanager.h  gui.pri
src/client/project/: client_device.cpp  client_device.h  client_port.cpp  client_port.h
src/client/runtime/: client_devicerunnable.cpp  client_devicerunnable.h  client_portrunnable.cpp  client_portrunnable.h  client_rundevice.cpp  client_rundevice.h  client_runmessage.cpp  client_runmessage.h  client_runport.h  client_runtime.cpp
src/core/: CMakeLists.txt  core.pro  win_resource.rc
src/core/core/: core.cpp  core.h  core_filemanager.h  core_global.cpp  core_global.h
src/core/gui/: core_rsc.qrc  core_ui.cpp  core_ui.h  core_windowmanager.cpp  core_windowmanager.h  gui.pri
src/core/plugin/: core_pluginmanager.h
src/core/project/: core_builder.cpp  core_builder.h  core_dataview.cpp  core_dataview.h  core_device.cpp  core_device.h  core_dom.cpp  core_dom.h  core_port.cpp  core_port.h  core_project.h  core_taskinfo.h
src/core/runtime/: core_runtaskthread.h  core_runtime.h
src/core/sdk/: mbcore.cpp  mbcore.h  mbcore_base.h  mbcore_binaryreader.h  mbcore_config.h  mbcore_task.h
src/server/: CMakeLists.txt  server.pro  win_resource.rc
src/server/core/: server.cpp  server.h  server_global.h
src/server/gui/: gui.pri  server_rsc.qrc  server_ui.cpp  server_ui.h  server_ui.ui  server_windowmanager.cpp  server_windowmanager.h
src/server/project/: server_builder.h  (+9 more)
(+178 files in other folders)
